--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <html>
 
     <head>
-      <link rel="stylesheet" href="stylesheet.css">
+      <link rel="stylesheet" href="main/stylesheet.css">
     </head>
 
     <div class="titlee">
